--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,7 +3,14 @@
 @tailwind utilities;
 
 @layer base {
-  body{
-    @apply tracking-wide text-neutral-700
+  body {
+    @apply tracking-wide text-neutral-700 select-none
+  }
+
+
+
+  [class*='active\:'] {
+    @apply duration-300;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
