--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -14,3 +14,9 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
+
+@layer utilities{
+  .scroll-hidden::-webkit-scrollbar{
+    display: none;
+  }
+}
