--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,11 +3,10 @@
 @tailwind utilities;
 
 @layer base {
+
   body {
     @apply tracking-wide text-neutral-700 select-none
   }
-
-
 
   [class*='active\:'] {
     @apply duration-300;
@@ -27,7 +26,7 @@
   }
 
   .custom.van-popup--center{
-    top: 50vh;
+    top: 50dvh;
     left: 50vw;
     margin: unset;
     transform: translateY(-50%) translateX(-50%);
